Fixed spacing in navbar so it is mobile first.

--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,13 @@
   height: 100%;
   background-color: #000000;
   color:#B3BBBD;
+  margin-bottom: -10rem;
 }
 .resume {
   background-color: #000000;
   height: 100vh;
   width:100%;
-  margin-bottom: -10rem;
+  
 }
 .responsive-resume {
   margin-left: 25vw;
@@ -23,20 +24,23 @@
   margin-left: 5rem;
 }
 .footer {
-  background-color: #000000;
+  overflow-y:hidden;
+  background-color: green;
   color: #B3BBBD;
-  position: fixed;
-  margin-top: 4rem;
+  position: absolute;
   width: 100vw;
-  height: 2rem;
+  height: 6rem;
 }
 
 .navbar {
-  background-color: #000000;
+  background-color: #000;
   color:#B3BBBD;
-  padding: 0rem 2rem 0rem 3rem;
+  padding: 0rem 2rem 0rem 2rem;
 }
 
+.links {
+  margin: 0rem 2rem 0rem 2rem;
+}
 a {
   color: #d87df6;
 }
